website/websites/demo2/code/mandelbrot.4.clang.log

Wed, 23 Mar 2011 20:41:24 GMT

MAKE:
/usr/bin/clang -pipe -Wall -O3 -fomit-frame-pointer -march=native -D_ISOC9X_SOURCE -mfpmath=sse -msse2 -lm -lpthread mandelbrot.clang-4.c -o mandelbrot.clang-4.clang_run
mandelbrot.clang-4.c:75:32: error: use of unknown builtin '__builtin_ia32_cmplepd'
            is_still_bounded = __builtin_ia32_cmplepd(Trv + Tiv, four);
                               ^
mandelbrot.clang-4.c:75:30: error: assigning to 'v2df' from incompatible type 'int'
            is_still_bounded = __builtin_ia32_cmplepd(Trv + Tiv, four);
                             ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
mandelbrot.clang-4.c:117:9: warning: unknown pragma ignored [-Wunknown-pragmas]
#pragma omp parallel for
        ^
mandelbrot.clang-4.c:127:9: warning: unknown pragma ignored [-Wunknown-pragmas]
#pragma omp parallel for schedule(static,1)
        ^
2 warnings and 2 errors generated.
make: [mandelbrot.clang-4.clang_run] Error 1 (ignored)
rm mandelbrot.clang-4.c
0.04s to complete and log all make actions

COMMAND LINE:
./mandelbrot.clang-4.clang_run 1000

MAKE ERROR 

